@@ -3,7 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
   }
 }
 
@@ -88,6 +88,9 @@ sourceSets {
     resources.srcDir file('src/contractTest/resources')
   }
 
+}
+tasks.withType(Copy) {
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 tasks.withType(JavaCompile) {
@@ -203,9 +206,10 @@ sonarqube {
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/config/**," +
-      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/Application.java" +
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/Application.java," +
       "src/testUtils/java/uk/gov/hmcts/reform/wataskmanagementapi/**," +
-      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/clients/**"
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/clients/**," +
+      "src/main/java/uk/gov/hmcts/reform/wataskmanagementapi/domain/entities/search/parameter/**"
   }
 }
 
@@ -268,7 +272,7 @@ def versions = [
   gradlePitest    : '1.5.1',
   pitest          : '1.5.2',
   sonarPitest     : '0.5',
-  pactVersion     : '4.1.7',
+  pactVersion     : '4.3.4',
   logbook         : '2.6.2'
 ]
 
@@ -290,20 +294,20 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
 
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
 
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.3'
 
   implementation group: 'io.springfox', name: 'springfox-boot-starter', version: versions.springfoxSwagger
-  compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
+  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
   implementation group: 'org.zalando', name: 'logbook-spring-boot-starter', version: versions.logbook
   implementation 'org.zalando:problem-spring-web-starter:0.26.2'
 
   implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
 
-  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'java-logging', version: versions.reformLogging
   implementation group: 'com.github.hmcts.java-logging', name: 'java-logging-appinsights', version: versions.reformLogging
@@ -311,18 +315,18 @@ dependencies {
   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.27.Final'
   implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.0.Final'
 
-  compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
-  compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.3'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.15.0'
 
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.54'
-  compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.54'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.54'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.54'
 
-  compile group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
-  compile group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.7.5'
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.2'
+  implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.7.5'
 
-  compile group: 'com.auth0', name: 'java-jwt', version: '3.11.0'
+  implementation group: 'com.auth0', name: 'java-jwt', version: '3.11.0'
 
-  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.12.0'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-paranamer', version: '2.12.0'
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '6.5.7'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.22'
@@ -346,30 +350,30 @@ dependencies {
     exclude group: 'com.github.jknack.handlebars.java'
   }
 
-  testCompile group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
+  testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
 
-  testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
-  testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
+  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
 
-  testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
-  testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-  testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
 
-  testCompile group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
-
+  testImplementation group: 'pl.pojo', name: 'pojo-tester', version: '0.7.6'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'
+  testImplementation 'com.google.guava:guava-testlib:31.0-jre'
   //Pact contract testing
-  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
-  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit', version: versions.pactVersion
 
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pactVersion
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pactVersion
-  contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pactVersion
+  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pactVersion
 
-  contractTestCompile('org.junit.jupiter:junit-jupiter-api:5.7.2')
-  contractTestRuntime('org.junit.jupiter:junit-jupiter-engine:5.7.2')
+  contractTestRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.7.2')
   contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.7.2')
 
   testUtilsImplementation sourceSets.main.runtimeClasspath
@@ -384,8 +388,8 @@ dependencies {
   smokeTestImplementation sourceSets.main.runtimeClasspath
   smokeTestImplementation sourceSets.test.runtimeClasspath
 
-  contractTestCompile sourceSets.main.runtimeClasspath
-  contractTestCompile sourceSets.test.runtimeClasspath
+  contractTestImplementation sourceSets.main.runtimeClasspath
+  contractTestImplementation sourceSets.test.runtimeClasspath
 }
 
 task runAndPublishConsumerPactTests(type: Test) {
@@ -422,6 +426,12 @@ task runProviderPactVerification(type: Test) {
   systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
   systemProperty 'pact.provider.version', project.pacticipantVersion
 }
+
+//task fortifyScan(type: JavaExec)  {
+//  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+//  classpath += sourceSets.test.runtimeClasspath
+//  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+//}
 
 runProviderPactVerification.dependsOn contract
 
